feature parts for index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,44 @@
+<!DOCTYPE html>
 <html>
-<header><title>This is title</title></header>
+<head>
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+
+    <meta charset="utf-8"/>
+
+    <title>This is title</title>
+
+</head>
 <body>
-Hello world
+
+<header class="header">
+    <div id="headerInner">
+
+    </div>
+</header>
+
+
+<section id="wrapper">
+    <div id="middle">
+        <div id="content">
+            <div id="colLeft">
+                Hello world
+            </div>
+
+            <aside id="colRight">
+
+            </aside>
+
+        </div>
+    </div>
+</section>
+
+
+<footer id="footer">
+    <div id="footerInner">
+
+    </div>
+</footer>
+
 </body>
 </html>
