add main blocks css

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="UTF-8"/>
     <title>Todos</title>
+    <link href="style.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
 <div class="todos-header">
-    <h1 class="todos-title">Todos</h1>
+    <h1 class="todos-title">todos</h1>
 </div>
 
 <div class="todos-main">
