feature css for background stages

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
             Удалить завершённые
         </button>
     </div>
+    <div class="first-stage"></div>
+    <div class="second-stage"></div>
 </div>
 </body>
 </html>
